// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/CheckBox CheckBox with Label 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        css={[Function]}
      >
        <span
          css={[Function]}
        >
          <input
            checked={false}
            css={[Function]}
            data-testid="checkbox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            css={
              Object {
                "map": undefined,
                "name": "26epj0",
                "next": undefined,
                "styles": "
    span {
      padding: 0;
    }

    svg {
      position: absolute;
      top: 0;
      display: none;
    }
  ",
                "toString": [Function],
              }
            }
            htmlFor="styled-checkbox-"
          >
            <span
              css={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "justifyContent": "center",
                  "padding": "0.125rem",
                }
              }
              onClick={[Function]}
            >
              <span
                css={[Function]}
              />
            </span>
          </label>
        </span>
        <span
          css={[Function]}
        >
          Not checked single
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        css={[Function]}
      >
        <span
          css={[Function]}
        >
          <input
            checked={true}
            css={[Function]}
            data-testid="checkbox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            css={
              Object {
                "map": undefined,
                "name": "frs6cl",
                "next": undefined,
                "styles": "
    span {
      padding: 0;
    }

    svg {
      position: absolute;
      top: 0;
      display: block;
    }
  ",
                "toString": [Function],
              }
            }
            htmlFor="styled-checkbox-"
          >
            <span
              css={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "justifyContent": "center",
                  "padding": "0.125rem",
                }
              }
              onClick={[Function]}
            >
              <span
                css={[Function]}
              />
            </span>
          </label>
        </span>
        <span
          css={[Function]}
        >
          Checked Single
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        css={[Function]}
      >
        <span
          css={[Function]}
        >
          <input
            checked={true}
            css={[Function]}
            data-testid="checkbox"
            disabled={true}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            css={
              Object {
                "map": undefined,
                "name": "frs6cl",
                "next": undefined,
                "styles": "
    span {
      padding: 0;
    }

    svg {
      position: absolute;
      top: 0;
      display: block;
    }
  ",
                "toString": [Function],
              }
            }
            htmlFor="styled-checkbox-"
          >
            <span
              css={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "justifyContent": "center",
                  "padding": "0.125rem",
                }
              }
              onClick={[Function]}
            >
              <span
                css={[Function]}
              />
            </span>
          </label>
        </span>
        <span
          css={[Function]}
        >
          Disabled single
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        css={[Function]}
      >
        <span
          css={[Function]}
        >
          <input
            checked={true}
            css={[Function]}
            data-testid="checkbox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            css={
              Object {
                "map": undefined,
                "name": "frs6cl",
                "next": undefined,
                "styles": "
    span {
      padding: 0;
    }

    svg {
      position: absolute;
      top: 0;
      display: block;
    }
  ",
                "toString": [Function],
              }
            }
            htmlFor="styled-checkbox-"
          >
            <span
              css={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "justifyContent": "center",
                  "padding": "0.125rem",
                }
              }
              onClick={[Function]}
            >
              <span
                css={[Function]}
              />
            </span>
          </label>
        </span>
        <span
          css={[Function]}
        >
          Checked intermediate
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        css={[Function]}
      >
        <span
          css={[Function]}
        >
          <input
            checked={false}
            css={[Function]}
            data-testid="checkbox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            css={
              Object {
                "map": undefined,
                "name": "26epj0",
                "next": undefined,
                "styles": "
    span {
      padding: 0;
    }

    svg {
      position: absolute;
      top: 0;
      display: none;
    }
  ",
                "toString": [Function],
              }
            }
            htmlFor="styled-checkbox-"
          >
            <span
              css={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "justifyContent": "center",
                  "padding": "0.125rem",
                }
              }
              onClick={[Function]}
            >
              <span
                css={[Function]}
              />
            </span>
          </label>
        </span>
        <span
          css={[Function]}
        >
          Not checked intermediate
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        css={[Function]}
      >
        <span
          css={[Function]}
        >
          <input
            checked={true}
            css={[Function]}
            data-testid="checkbox"
            disabled={true}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            css={
              Object {
                "map": undefined,
                "name": "frs6cl",
                "next": undefined,
                "styles": "
    span {
      padding: 0;
    }

    svg {
      position: absolute;
      top: 0;
      display: block;
    }
  ",
                "toString": [Function],
              }
            }
            htmlFor="styled-checkbox-"
          >
            <span
              css={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "justifyContent": "center",
                  "padding": "0.125rem",
                }
              }
              onClick={[Function]}
            >
              <span
                css={[Function]}
              />
            </span>
          </label>
        </span>
        <span
          css={[Function]}
        >
          Disabled checked intermediate
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/CheckBox CheckBox with Props 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        css={[Function]}
      >
        <span
          css={[Function]}
        >
          <input
            checked={false}
            css={[Function]}
            data-testid="checkbox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            css={
              Object {
                "map": undefined,
                "name": "26epj0",
                "next": undefined,
                "styles": "
    span {
      padding: 0;
    }

    svg {
      position: absolute;
      top: 0;
      display: none;
    }
  ",
                "toString": [Function],
              }
            }
            htmlFor="styled-checkbox-"
          >
            <span
              css={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "justifyContent": "center",
                  "padding": "0.125rem",
                }
              }
              onClick={[Function]}
            >
              <span
                css={[Function]}
              />
            </span>
          </label>
        </span>
        
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/CheckBox CheckBox without 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        css={[Function]}
      >
        <span
          css={[Function]}
        >
          <input
            checked={true}
            css={[Function]}
            data-testid="checkbox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            css={
              Object {
                "map": undefined,
                "name": "frs6cl",
                "next": undefined,
                "styles": "
    span {
      padding: 0;
    }

    svg {
      position: absolute;
      top: 0;
      display: block;
    }
  ",
                "toString": [Function],
              }
            }
            htmlFor="styled-checkbox-"
          >
            <span
              css={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "justifyContent": "center",
                  "padding": "0.125rem",
                }
              }
              onClick={[Function]}
            >
              <span
                css={[Function]}
              />
            </span>
          </label>
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        css={[Function]}
      >
        <span
          css={[Function]}
        >
          <input
            checked={false}
            css={[Function]}
            data-testid="checkbox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            css={
              Object {
                "map": undefined,
                "name": "26epj0",
                "next": undefined,
                "styles": "
    span {
      padding: 0;
    }

    svg {
      position: absolute;
      top: 0;
      display: none;
    }
  ",
                "toString": [Function],
              }
            }
            htmlFor="styled-checkbox-"
          >
            <span
              css={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "justifyContent": "center",
                  "padding": "0.125rem",
                }
              }
              onClick={[Function]}
            >
              <span
                css={[Function]}
              />
            </span>
          </label>
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        css={[Function]}
      >
        <span
          css={[Function]}
        >
          <input
            checked={true}
            css={[Function]}
            data-testid="checkbox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            css={
              Object {
                "map": undefined,
                "name": "frs6cl",
                "next": undefined,
                "styles": "
    span {
      padding: 0;
    }

    svg {
      position: absolute;
      top: 0;
      display: block;
    }
  ",
                "toString": [Function],
              }
            }
            htmlFor="styled-checkbox-"
          >
            <span
              css={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "justifyContent": "center",
                  "padding": "0.125rem",
                }
              }
              onClick={[Function]}
            >
              <span
                css={[Function]}
              />
            </span>
          </label>
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        css={[Function]}
      >
        <span
          css={[Function]}
        >
          <input
            checked={false}
            css={[Function]}
            data-testid="checkbox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            css={
              Object {
                "map": undefined,
                "name": "26epj0",
                "next": undefined,
                "styles": "
    span {
      padding: 0;
    }

    svg {
      position: absolute;
      top: 0;
      display: none;
    }
  ",
                "toString": [Function],
              }
            }
            htmlFor="styled-checkbox-"
          >
            <span
              css={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "justifyContent": "center",
                  "padding": "0.125rem",
                }
              }
              onClick={[Function]}
            >
              <span
                css={[Function]}
              />
            </span>
          </label>
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        css={[Function]}
      >
        <span
          css={[Function]}
        >
          <input
            checked={false}
            css={[Function]}
            data-testid="checkbox"
            disabled={true}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            css={
              Object {
                "map": undefined,
                "name": "26epj0",
                "next": undefined,
                "styles": "
    span {
      padding: 0;
    }

    svg {
      position: absolute;
      top: 0;
      display: none;
    }
  ",
                "toString": [Function],
              }
            }
            htmlFor="styled-checkbox-"
          >
            <span
              css={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "justifyContent": "center",
                  "padding": "0.125rem",
                }
              }
              onClick={[Function]}
            >
              <span
                css={[Function]}
              />
            </span>
          </label>
        </span>
      </span>
    </div>
  </div>
</div>
`;
